fixed white background issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,5 @@
 html, body, #root {
   padding: 0;
   height: 100%;
+  background: #282828;
 }
